--- a/socialMeteor/Base.lproj/Main.storyboard
+++ b/socialMeteor/Base.lproj/Main.storyboard
@@ -204,12 +204,16 @@
                                         <color key="textColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back_btn" translatesAutoresizingMaskIntoConstraints="NO" id="mWa-Fj-qjk">
+                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back_btn" translatesAutoresizingMaskIntoConstraints="NO" id="mWa-Fj-qjk">
                                         <rect key="frame" x="8" y="22" width="20" height="20"/>
+                                        <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="4ih-jq-1Ak"/>
                                             <constraint firstAttribute="height" constant="20" id="8SH-Tw-uK7"/>
                                         </constraints>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="wq9-5n-h7k" appends="YES" id="qdI-w0-dau"/>
+                                        </connections>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_icon" translatesAutoresizingMaskIntoConstraints="NO" id="7ZV-SI-viZ">
                                         <rect key="frame" x="347" y="22" width="20" height="20"/>
@@ -242,6 +246,7 @@
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera_icon_snap" translatesAutoresizingMaskIntoConstraints="NO" id="zSs-Rd-BQ1">
                                                 <rect key="frame" x="0.0" y="5" width="40" height="40"/>
+                                                <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="cj3-8H-hC3"/>
                                                     <constraint firstAttribute="height" constant="40" id="pSV-Wf-Kty"/>
@@ -414,6 +419,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aPn-ob-R0t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="wq9-5n-h7k">
+                    <connections>
+                        <action selector="signOutBtn:" destination="AM1-VG-KmG" id="sLB-dc-jNY"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="872.79999999999995" y="138.98050974512745"/>
         </scene>
