--- a/socialMeteor/Base.lproj/Main.storyboard
+++ b/socialMeteor/Base.lproj/Main.storyboard
@@ -244,13 +244,16 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="M94-eI-Shy">
                                         <rect key="frame" x="8" y="0.0" width="327" height="50"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera_icon_snap" translatesAutoresizingMaskIntoConstraints="NO" id="zSs-Rd-BQ1">
+                                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera_icon_snap" translatesAutoresizingMaskIntoConstraints="NO" id="zSs-Rd-BQ1">
                                                 <rect key="frame" x="0.0" y="5" width="40" height="40"/>
                                                 <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="cj3-8H-hC3"/>
                                                     <constraint firstAttribute="height" constant="40" id="pSV-Wf-Kty"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="ec7-1c-nNp" appends="YES" id="qjT-E2-m5K"/>
+                                                </connections>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Add a post" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xgY-Jr-M1K" customClass="textField" customModule="socialMeteor" customModuleProvider="target">
                                                 <rect key="frame" x="48" y="5" width="231" height="40"/>
@@ -270,6 +273,9 @@
                                                     <constraint firstAttribute="height" constant="40" id="kAk-EL-JEq"/>
                                                 </constraints>
                                                 <state key="normal" image="post_btn"/>
+                                                <connections>
+                                                    <action selector="postBtn:" destination="AM1-VG-KmG" eventType="touchUpInside" id="sZb-rz-xVj"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -326,7 +332,7 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HV2-Fb-ist">
                                                             <rect key="frame" x="8" y="66" width="327" height="282"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Stars-Back" translatesAutoresizingMaskIntoConstraints="NO" id="UCC-ny-Ikk">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Stars-Back" translatesAutoresizingMaskIntoConstraints="NO" id="UCC-ny-Ikk">
                                                                     <rect key="frame" x="0.0" y="0.0" width="327" height="224"/>
                                                                 </imageView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CaY-1n-bop">
@@ -415,6 +421,8 @@
                     </view>
                     <connections>
                         <outlet property="feedTableView" destination="jze-Ma-gsM" id="P8V-Qs-Pjf"/>
+                        <outlet property="imagePost" destination="zSs-Rd-BQ1" id="aVY-AW-P8a"/>
+                        <outlet property="postCaption" destination="xgY-Jr-M1K" id="CS7-3C-v8i"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="SignOutSegue" id="Buw-vk-dTb"/>
                     </connections>
                 </viewController>
@@ -422,6 +430,11 @@
                 <tapGestureRecognizer id="wq9-5n-h7k">
                     <connections>
                         <action selector="signOutBtn:" destination="AM1-VG-KmG" id="sLB-dc-jNY"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="ec7-1c-nNp">
+                    <connections>
+                        <action selector="postImageBtn:" destination="AM1-VG-KmG" id="FWw-3M-tPp"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
